--- a/app/package.json
+++ b/app/package.json
@@ -5,10 +5,13 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint --fix"
   },
   "dependencies": {
+    "autoprefixer": "^10.4.13",
     "core-js": "^3.8.3",
+    "postcss": "^8.4.21",
+    "tailwindcss": "^3.2.4",
     "vue": "^3.2.13"
   },
   "devDependencies": {
@@ -17,22 +20,13 @@
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-eslint": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
-    "eslint": "^7.32.0",
-    "eslint-plugin-vue": "^8.0.3"
-  },
-  "eslintConfig": {
-    "root": true,
-    "env": {
-      "node": true
-    },
-    "extends": [
-      "plugin:vue/vue3-essential",
-      "eslint:recommended"
-    ],
-    "parserOptions": {
-      "parser": "@babel/eslint-parser"
-    },
-    "rules": {}
+    "css-loader": "^6.7.3",
+    "eslint": "^8.33.0",
+    "eslint-import-resolver-webpack": "^0.13.2",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-vue": "^9.9.0",
+    "node-sass": "^8.0.0",
+    "sass-loader": "^13.2.0"
   },
   "browserslist": [
     "> 1%",
