--- a/app_vue3/package.json
+++ b/app_vue3/package.json
@@ -13,7 +13,8 @@
     "postcss": "^8.4.21",
     "tailwindcss": "^3.2.4",
     "vue": "^3.2.13",
-    "vue-router": "^4.0.3"
+    "vue-router": "^4.0.3",
+    "vuex": "^4.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
@@ -21,6 +22,7 @@
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-eslint": "~5.0.0",
     "@vue/cli-plugin-router": "~5.0.0",
+    "@vue/cli-plugin-vuex": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
     "css-loader": "^6.7.3",
     "eslint": "^8.33.0",
