--- a/app_vue2/package.json
+++ b/app_vue2/package.json
@@ -8,10 +8,13 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@vee-validate/i18n": "^4.7.4",
+    "@vee-validate/rules": "^4.7.4",
     "autoprefixer": "^10.4.13",
     "core-js": "^3.8.3",
     "postcss": "^8.4.21",
     "tailwindcss": "^3.2.4",
+    "vee-validate": "3",
     "vue": "^2.6.14",
     "vue-router": "^3.5.1",
     "vuex": "^3.6.2"
