--- a/app_vue3/package.json
+++ b/app_vue3/package.json
@@ -14,7 +14,7 @@
     "core-js": "^3.8.3",
     "postcss": "^8.4.21",
     "tailwindcss": "^3.2.4",
-    "vee-validate": "3",
+    "vee-validate": "^4.7.4",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3",
     "vuex": "^4.0.0"
