--- a/app_vue2/package.json
+++ b/app_vue2/package.json
@@ -11,6 +11,7 @@
     "@vee-validate/i18n": "^4.7.4",
     "@vee-validate/rules": "^4.7.4",
     "autoprefixer": "^10.4.13",
+    "axios": "^1.3.2",
     "core-js": "^3.8.3",
     "postcss": "^8.4.21",
     "tailwindcss": "^3.2.4",
