--- a/app_vue2/package.json
+++ b/app_vue2/package.json
@@ -13,6 +13,7 @@
     "autoprefixer": "^10.4.13",
     "axios": "^1.3.2",
     "core-js": "^3.8.3",
+    "js-cookie": "^3.0.1",
     "postcss": "^8.4.21",
     "tailwindcss": "^3.2.4",
     "vee-validate": "3",
